--- a/app.css
+++ b/app.css
@@ -153,3 +153,25 @@ body {
   );
   box-shadow: 0px 0px 30px -8px rgba(0, 0, 0, 0.66);
 }
+
+.history {
+  height: 25%;
+  background-color: blue;
+}
+
+.main-result {
+  height: 15%;
+  background-color: red;
+}
+
+.input {
+  height: 60%;
+}
+
+.input div {
+  border: 1px solid rgba(173, 0, 248, 0.25);
+}
+
+.input-row > .col-3 {
+  height: 20%;
+}
